.k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: simple-blog
    process: web
  name: simple-blog-web
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: simple-blog
      process: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: simple-blog
        process: web
    spec:
      containers:
        - env:
            - name: PORT
              value: "3000"
          image: ghcr.io/junkers21/simple_blog_ror:latest
          imagePullPolicy: IfNotPresent
          name: simple-blog-web
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
