.k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-blog-service
  labels:
    app: simple-blog
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3000
  selector:
    app: simple-blog
